# picocompress

./: .gitignore  PERFORMANCE_SUMMARY.md  README.md  TEST_METHODS.md  benchmark_harness.py  benchmark_results.json  benchmark_tables.txt  picocompress.c  picocompress.h  run_benchmarks.ps1  test_picocompress.c  test_picocompress_additional.c
boards/esp32cam/: README.md  esp32cam_benchmark.ino  platformio.ini
boards/pico2w/: CMakeLists.txt  README.md  bench_results.txt  build_pico.bat  heatshrink_config.h  main.c  pc_balanced.c  pc_micro.c  pc_minimal.c  pc_q3.c  pc_q4.c  rebuild.bat
docs/: ALGORITHM.md  CRIB_MODE.md  PERFORMANCE_SUMMARY.md  PLATFORM_SUPPORT.md  PORTING_GUIDE.md  TEST_METHODS.md  benchmark_results.json  benchmark_results_arm.json  benchmark_results_auto.json  benchmark_results_pico00.json  benchmark_results_v5.json  benchmark_tables.txt  benchmark_tables_arm.txt  generate_charts.py  run_benchmarks.ps1
ports/arduino/: README.md  keywords.txt  library.properties
ports/csharp/: CrossCheck.csx  Picocompress.cs  Picocompress.csproj  (+2 more)
src/: hash_spike.c  picocompress.c  picocompress.h  test_picocompress_stats.c
tests/: ascii-254.txt  csource-4K.txt  docs-4K.txt  json-4K-minified.json  json-4K-pretty.json  json-508.json  lorem-508.txt  order-pos-1024K.txt  order-pos-128K.txt  order-pos-16K.txt  order-pos-1K.txt  order-pos-2K.txt  order-pos-32K.txt  order-pos-4K.txt  order-pos-512K.txt  order-pos-8K.txt  platform-docs.txt  story-2K.txt  uk-addr-1024K.txt  uk-addr-128K.txt  uk-addr-16K.txt  uk-addr-1K.txt  uk-addr-2K.txt  uk-addr-32K.txt  uk-addr-4K.txt  uk-addr-512K.txt  uk-addr-8K.txt  utf8-prose-1024K.txt  utf8-prose-128K.txt  utf8-prose-16K.txt  utf8-prose-1K.txt  utf8-prose-2K.txt  utf8-prose-32K.txt  utf8-prose-4K.txt  utf8-prose-512K.txt  utf8-prose-8K.txt
tools/: gen_phoneme_dict.py  phoneme_dict_english.c  phoneme_dict_english_meta.txt  phoneme_dict_meta.txt  phoneme_dict_output.c
(+24 files in other folders)
